--- a/JapanPrediction.ipynb
+++ b/JapanPrediction.ipynb
@@ -273,7 +273,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f7894da6fd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f41afb61250>"
       ]
      },
      "execution_count": 4,
@@ -307,7 +307,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f7894cf02d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f41afb09550>"
       ]
      },
      "execution_count": 5,
@@ -892,7 +892,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f7894c65110>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f41af9bba50>"
       ]
      },
      "execution_count": 15,
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1058,7 @@
        "122    229  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -1081,7 +1081,7 @@
        "(1347, 2)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1126,14 +1126,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7042186796597882\n"
+      "0.7642734426670634\n"
      ]
     }
    ],
@@ -1147,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1158,10 +1158,10 @@
       "                      max_features='auto', max_leaf_nodes=None,\n",
       "                      min_impurity_decrease=0.0, min_impurity_split=None,\n",
       "                      min_samples_leaf=1, min_samples_split=2,\n",
-      "                      min_weight_fraction_leaf=0.0, n_estimators=680,\n",
+      "                      min_weight_fraction_leaf=0.0, n_estimators=550,\n",
       "                      n_jobs=None, oob_score=False, random_state=None,\n",
       "                      verbose=0, warm_start=False)\n",
-      "0.7932886589339895\n"
+      "0.7947744367157392\n"
      ]
     }
    ],
